k8s/go-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service
  namespace: default
spec:
  replicas: 2 # High Availability baseline
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
      - name: go-api
        image: shakinshahria/urlshortener-go:latest # <-- CHANGE TO YOUR DOCKERHUB USERNAME
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: default
spec:
  type: ClusterIP # Internal cluster communication
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: go-service
