k8s/node-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      containers:
      - name: node-frontend
        image: shakinshahria/urlshortener-node:latest # <-- CHANGE TO YOUR DOCKERHUB USERNAME
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: node-service
