k8s/python-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
      - name: python-analytics
        image: shakinshahria/urlshortener-python:latest # <-- CHANGE TO YOUR DOCKERHUB USERNAME
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "512Mi" # Higher memory ceiling for analytical tasks
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: python-service
